--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,10 @@
+/* Font */
+@import url('https://fonts.googleapis.com/css2? family= Poppins:ital,wght@0,100;0,400;0,700;1,400 & display=swap');
+
+:root{
+    --darkblue: #363f5f;
+}
+/* Globais */
 *{
     margin:0;
     padding: 0;
@@ -8,3 +15,142 @@ body{
     font-family: 'Poppins', sans-serif;
 }
 
+.sr-only{
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1;
+    overflow: hidden;
+    clip: rect(0,0,0,0);
+    white-space: nowrap;
+    border-width: 0;
+}
+
+.container {
+    width: min(90vw,800px);
+    margin: auto;
+}
+
+/* titles */
+h2{
+    margin-top: 3.2rem;
+    margin-bottom: 0.8rem;
+    color: var(--darkblue);
+
+    font-weight: 400;
+}
+
+/* HEADER */
+header {
+    background:#2D4A22;
+    padding: 2rem 0 10rem;
+    text-align: center;
+}
+
+#Logo{
+    color:#FFF;
+    font-weight: 100;
+}
+
+
+/* Balance */
+#balance{
+    margin-top: -8rem;
+}
+
+#balance h2 {
+    color:#FFF;
+    margin-top: 0;
+}
+
+/* Cards */
+
+.card{
+    background-color: white;
+    padding: 1.5rem 2rem;
+    border-radius: .25rem;
+    margin-bottom: 2rem;
+    color: var(--color-darkblue)
+
+}
+
+.card h3 {
+    font-weight: 400;
+    font-size: 1rem;
+}
+
+.card p {
+    font-size:2rem;
+    line-height: 3rem;
+    margin-top: 1rem;
+}
+
+.card.total{
+    background:#49AA26;
+    color: white;
+}
+/* Table */
+#transaction {
+    display: block;
+    width: 100%;
+    overflow-x: auto;
+}
+#data-table {
+    width: 100%;
+    border-spacing: 0 0.5rem;
+    color: #969cb3;
+}
+
+table thead tr th:first-child, 
+table tbody tr td:first-child
+{
+    border-radius: 0.25rem 0 0 0.25rem;
+}
+
+table thead tr th:last-child, 
+table tbody tr td:last-child{
+    border-radius: 0 0.25rem 0.25rem 0;
+}
+
+table thead th {
+    background: white;
+
+    font-weight: normal;
+    padding: 1rem 2rem;
+
+    text-align: left;
+}
+
+table tbody tr {
+    opacity: 0.7
+}
+
+table tbody tr:hover {
+    opacity: 1
+}
+
+table tbody td {
+    background:white;
+    padding: 1rem 2rem;
+}
+
+td.description {
+    color: var(--dark-blue);
+}
+
+td.income {
+    color: #12a454;
+}
+
+td.expense {
+    color: #e92929;
+}
+
+/* FOOTER */
+footer{
+    text-align: center;
+    padding: 4rem 0 2rem;
+    color: var(--dark-blue);
+    opacity: 0.6;
+}
