--- a/assets/style.css
+++ b/assets/style.css
@@ -3,12 +3,15 @@
 
 :root{
     --darkblue: #363f5f;
+    --purple: linear-gradient(90deg, rgba(227,6,226,1) 0%, rgba(212,9,233,1) 35%, rgba(231,0,255,1) 100%);
+    --light-purple: #A0089E;
+    --red: #e92929;
 }
 /* Globais */
 *{
     margin:0;
     padding: 0;
-    color:white;
+
 }
 
 html{
@@ -40,32 +43,62 @@ body{
 
 /* titles */
 h2{
-   
     font-weight: 400;
     margin-top: 3.2rem;
     margin-bottom: 0.8rem;
 }
 
+
 /* Links and Buttons */
 
 a{
-    color: #49AA26;
+    color: #A0089E;
     text-decoration: none;
 }
 
-a::hover{
- color: #3DD705;
+a:hover{
+ color: #7C077A;
+ transition: 0.5s;
 }
 
-.new{
+button{
+    width: 100%;
+    height: 50px;
+    border: none;
+    color: white;
+    background: var(--purple);
+    border-radius: .50rem;
+
+}
+
+button:hover {
+background: #7C077A;
+cursor: pointer;
+}
+.button.new{
     display: inline-block;
     margin-bottom: .8rem;
     
 }
 
+.button.cancel{
+    color: var(--red);
+    border: 2px var(--red) solid;
+    border-radius: 0.25rem;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0.6;
+}
+
+.button.cancel:hover {
+    opacity: 1;
+}
+
 /* HEADER */
 header {
-    background: linear-gradient(90deg, rgba(227,6,226,1) 0%, rgba(212,9,233,1) 35%, rgba(231,0,255,1) 100%);;
+    background: var(--purple);
     padding: 2rem 0 10rem;
     text-align: center;
 }
@@ -194,14 +227,55 @@ td.expense {
     padding: 2.4rem;
     position: relative;
     color: white;
+    width:75%;
+    max-width: 500px;
 }
-/* FOOTER */
-footer{
+/* FORM */
+#form{
+    max-width: 500px;
+
+}
+
+#form h2{
+    margin-top: 0;
+}
+
+input{
+    border: none;
+    border-radius: 0.2rem;
+    padding: .8rem;
+    width: 100%;
+}
+
+
+.input-group{
+    margin-top: 0.8rem;
+}
+
+.input-group small{
+    opacity: 0.4;
+}
+
+.input-group.actions {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.input-group.actions .button,
+.input-group.actions button {
+    width: 30%;
+}
+
+/* footer */
+footer {
     text-align: center;
     padding: 4rem 0 2rem;
     color: white;
+
     opacity: 0.6;
 }
+
 
 /* Responsividade */
 
