--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,4 @@
-/* Font */
-@import url('https://fonts.googleapis.com/css2? family= Poppins:ital,wght@0,100;0,400;0,700;1,400 & display=swap');
+
 
 :root{
     --darkblue: #363f5f;
@@ -50,6 +49,10 @@ h2{
 
 
 /* Links and Buttons */
+#link-nome{
+    color: #A4CFEe;
+    
+}
 
 a{
     color: #A0089E;
@@ -127,6 +130,7 @@ header {
     color: white;
     margin-bottom: 2rem;
     padding: 1.5rem 2rem;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 
 }
 
@@ -136,6 +140,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    
 }
 
 .card p {
@@ -145,8 +150,9 @@ header {
 }
 
 .card.total{
-    background: linear-gradient(90deg, rgba(7,215,80,1) 0%, rgba(36,233,9,1) 35%, rgba(0,255,94,1) 100%);
+    background: #2CD12A;
     color: white;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 /* Table */
 #transaction {
@@ -154,6 +160,7 @@ header {
     width: 100%;
     overflow-x: auto;
 }
+
 #data-table {
     width: 100%;
     border-spacing: 0 0.5rem;
@@ -275,6 +282,8 @@ footer {
 
     opacity: 0.6;
 }
+
+
 
 
 /* Responsividade */
